2003-07-21  Adam Fedor  <fedor@gnu.org>

	* target.make: Set thread library in AUXILIARY_OBJC_LIBS. Set
        reentrant flags for all targets if threaded. Remove duplicates.


	* Documentation/README.MinGW: Updated for default flattened
	structure.
	* Documentation/gnustep-howto.texi: Idem.
	
Mon Jul 21 10:42:42 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* debugapp.in: Detect core files with name core.xxx, not just
	core, as found on some gnu-linux systems.  Improved user
	prompting.

Mon Jul 21 10:31:08 2003  Andrew Ruder <aeruder@ksu.edu>

	* debugapp.in: Pass debugapp arguments to gdb to use when running
	the application.

Wed Jul 16 09:46:16 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* target.make (INTERNAL_OBJCFLAGS): On darwin with library-combo
	apple-apple-apple, use -no-cpp-precomp rather than
	-traditional-cpp.

Wed Jul  9 16:28:14 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Made flattened directory structure the default.
	Explicitly print a message saying if we use flattened or
	non-flattened directory structure.
	* configure: Regenerated.
	
2003-07-06  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Remove '^' match from gcc version sed script.

2003-07-05  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Add flags for openbsd like freebsd.

2003-07-05  Adam Fedor  <fedor@gnu.org>

	* Documentation/GNUmakefile.in (after-install): gzip man files
	* Documentation/GNUstep.7: Unziped.

2003-07-05  Adam Fedor  <fedor@gnu.org>

	* clean_os.sh: Clean netbsdelf.
	* configure.ac: Add -R flags for netbsdelf
	* target.make (netbsd/ADDITONAL_LDFLAGS): Idem.
	(Patches from Peter Cooper <comrade@obverse.com.au>

2003-06-29 Richard Frith-Macdonald <rfm@gnu.org>

	* user_home.c: Cast all arguments to isspace() as int ... for picky
	compiler versions.

2003-06-25  Adam Fedor  <fedor@gnu.org>

	* Documentation/GNUmakefile.in (after-install): Install man pages
	* Documentation/GNUstep.7.gz: New file (from Martin Brecher).
