@@ -1,3 +1,9 @@
+2003-07-22 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* user_home.c: Use HOMEPATH in preference to USERPROFILE for
+	OPENSTEP compatibility and because USERPROFILE generally doesn't
+	work due to the presence of spaces.
+
 2003-07-21  Adam Fedor  <fedor@gnu.org>
 
 	* target.make: Set thread library in AUXILIARY_OBJC_LIBS. Set
